--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     <table id="header">
       <tr>
         <td id="logo"><span class="wsite-logo">
-					<a href="index.html"><span id="wsite-title">Kevin Jang - pianist</span></a></span>
-				</td>
+          <a href="index.html"><span id="wsite-title">Kevin Jang - pianist</span></a>
+        </td>
         <td id="header-right">
           <table>
             <tr>
@@ -37,28 +37,28 @@
             <ul class="wsite-menu-default">
               <li id="pg723196183507143659" class="wsite-menu-item-wrap">
                 <a href="index.html" class="wsite-menu-item">
-									Home
-								</a>
+                  Home
+                </a>
               </li>
               <li id="pg483396380378198634" class="wsite-menu-item-wrap">
                 <a href="biography.html" class="wsite-menu-item">
-									Biography
-								</a>
+                  Biography
+                </a>
               </li>
               <li id="pg829536439258051337" class="wsite-menu-item-wrap">
                 <a href="events.html" class="wsite-menu-item">
-									Events
-								</a>
+                  Events
+                </a>
               </li>
               <li id="pg579509820257163466" class="wsite-menu-item-wrap">
                 <a href="repertoire.html" class="wsite-menu-item">
-									Repertoire
-								</a>
+                  Repertoire
+                </a>
               </li>
               <li id="active" class="wsite-menu-item-wrap">
                 <a href="contact.html" class="wsite-menu-item">
-									Contact
-								</a>
+                  Contact
+                </a>
               </li>
             </ul>
           </div>
