--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta name="keywords" content="pianist" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="files/main_style.css?1464620637" title="wsite-theme-css" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style type='text/css'>
   .wsite-header {
     background-image: url(uploads/3/4/2/0/34205474/header_images/1322791871.jpg) !important;
