Add google site verification

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta property="og:url" content="https://kevinjang.com/" />
   <meta name="keywords" content="pianist" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="google-site-verification" content="-lX76go5W1qWB2xYTC0cxTmvPpI4KttDvs7myHHd8nc" />
   <link rel="stylesheet" type="text/css" href="files/main_style.css?1464620637" title="wsite-theme-css" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
